LightBDD
===========================================

Version 1.1.5
------------------------------------------
+ extracted NUnit related code to LightBDD.NUnit
+ introduced LightBDD.MbUnit to add support for MbUnit framework

Version 1.1.4
-------------------------------------------
+ extended FeatureFixture with CreateProgressNotifier() method allowing to specify IProgressNotifier used by BDDRunner.

Version 1.1.3
-------------------------------------------
+ added StatusDetails to IStepResult and IScenarioResult, providing details for Failed/Ignored status
+ modified XmlResultFormatter, PlainTextResultFormatter and ConsoleProgressNotifier to include StatusDetails

Version 1.1.2
-------------------------------------------
+ fixed scenario name display for LightBDD being compiled in Release mode,
+ introduced [Label] attribute allowing to apply label on feature test class or scenario method (like ticket number)
+ adjusted result formatters and progress notifiers to include label

Version 1.1.1
-------------------------------------------
+ introduced TestCoordinator and FeatureSummaryAggregator
+ introduced FeatureFixture base class for feature tests
+ with usage of FeatureFixture, no additional classes are needed to create in order to save result summary
+ simplified Visual Studio Project Item Templates

Version 1.1.0
-------------------------------------------
+ added PlainTextResultFormatter and XmlResultFormatter to format test results
+ added TestResultsSummary class to collect all results and save them to xml file
+ added detection of feature name based on test class name
+ added feature description based on [Description] attribute
+ added Visual Studio Project Item templates to create base test classes and feature test classes

Version 1.0.0
-------------------------------------------
+ implemented BDDRunner with RunScenario method
+ added detection of scenario name based on calling method name
+ added step name formatting