@@ -45,6 +45,7 @@
     <Compile Include="BDD_runner_tests.cs" />
     <Compile Include="Coordination\FeatureCoordinatorTests.cs" />
     <Compile Include="Coordination\FeatureSummaryAggregatorTests.cs" />
+    <Compile Include="FeatureResultTests.cs" />
     <Compile Include="SomeSteps.cs" />
     <Compile Include="StepTests.cs" />
     <Compile Include="TestableBDDRunner.cs" />
